Closed Bug 43411 Opened 25 years ago Closed 24 years ago

"Clean up ('Expunge') Inbox on Exit" doesn't work when Account setting to "Mark as deleted" mode for IMAP server

Categories

(MailNews Core :: Networking: IMAP, defect, P3)

x86
Windows 95
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: rcummins, Assigned: naving)

References

Details

(Whiteboard: [nsbeta3-][cut 8/28] relnote-user)

From Bugzilla Helper: User-Agent: Mozilla/4.72 [en]C-CCK-MCD (Win95; U) BuildID: 2000061311 Mozilla Mail is set up with a single IMAP account (UW IMAP server). Server Settings which are not default are "When I delete a message: Mark it as deleted" and "Clean up ('Expunge') Inbox on Exit". Mozilla DOES mark messages as deleted (sets the "deleted" flag on the message) on the IMAP server when "delete" on the toolbar is clicked. Mozilla DOES expunge messages marked as deleted when "File", "Compact this folder" is used. Mozilla DOES NOT automatically expunge messages from the IMAP server when Mozilla Mail is exited, nor when Mozilla itself is exited. Reproducible: Always Steps to Reproduce: 1. Create an IMAP account on Mozilla, with server settings as "When I delete a message: Mark it as deleted" and "Clean up ('Expunge') Inbox on Exit". 2. Send some e-mails to this account 3. Mark some/all as deleted using the "delete" key on the toolbar - an "X" will appear in the message icon in the header pane(?) to indicate they're marked as deleted, and the messages on the server will have the "deleted" flag applied to them. 4. Exit Mozilla 5. Restart Mozilla 6. Check e-mail - the messages previously marked as deleted will still be there, still marked as deleted but obviously not expunged. Actual Results: messages previously marked as deleted will still be there, still marked as deleted but obviously not expunged Expected Results: Messages marked as deleted on an IMAP server should be expunged on Mozilla's exit when the "Clean up ('Expunge') Inbox on Exit" item is checked (activated) in Server Settings for the appropriate IMAP server. NC 4.72 correctly expunges on exit. While openeing Messenger, selecting an e-mail, marking it as deleted, and then exiting Messenger, it says to the IMAP server: 1 capability 2 authenticate login [snip] 3 list "" "mail/%" 4 list "" "mail/%|%" 5 list "" "INBOX" 6 select "INBOX" 7 noop 8 UID fetch 1:* (FLAGS) 9 UID fetch 2 (UID RFC822.SIZE FLAGS BODY.PEEK[HEADER.FIELDS (From To Cc Subject Date Priority X-Priority Message-ID References Newsgroups Return-Receipt-To Disposition-Notification-To)]) 10 UID fetch 2 (UID RFC822.SIZE BODY[]) 11 uid store 2 +FLAGS (\Deleted) 12 expunge xxxx logout While Mozilla says: 1 capability 2 authenticate login [snip] 3 namespace 4 lsub "" "*" 5 lsub "" "#mhinbox*" 6 lsub "" "#mh/*" 7 lsub "" "~*" 8 lsub "" "#shared/*" 9 lsub "" "#ftp/*" 10 lsub "" "#news.*" 11 lsub "" "#public/*" 12 list "" "INBOX" 13 select "INBOX" 14 UID fetch 1:* (FLAGS) 15 UID fetch 5 (UID RFC822.SIZE FLAGS ENVELOPE BODY.PEEK[HEADER.FIELDS (Priority X-Priority References Newsgroups)]) 16 UID fetch 5 (UID RFC822.SIZE BODY[]) 17 uid store 5 +Flags (\Deleted) 18 logout 19 logout "Manually" expunging using "File" -> "Compact this Folder", which does work, Mozilla says: 1 capability 2 authenticate login [snip] 3 namespace 4 lsub "" "*" 5 lsub "" "#mhinbox*" 6 lsub "" "#mh/*" 7 lsub "" "~*" 8 lsub "" "#shared/*" 9 lsub "" "#ftp/*" 10 lsub "" "#news.*" 11 lsub "" "#public/*" 12 list "" "INBOX" 13 select "INBOX" 14 UID fetch 1:* (FLAGS) 15 UID fetch 4 (UID RFC822.SIZE FLAGS ENVELOPE BODY.PEEK[HEADER.FIELDS (Priority X-Priority References Newsgroups)]) 16 UID fetch 4 (UID RFC822.SIZE BODY[]) 17 uid store 4 +Flags (\Deleted) 18 expunge ...so it seems, uh, Mozilla doesn't expunge on exit. prefs.js: # Mozilla User Preferences // This is a generated file! user_pref("browser.cache.directory", "C:\\WINDOWS\\DESKTOP\\M17\\Users50\\default\\Cache"); user_pref("browser.history.last_page_visited", "http://www.mozilla.org/projects/seamonkey/release-notes/"); user_pref("browser.startup.homepage_override.1", false); user_pref("ldap_2.servers.history.filename", "history.mab"); user_pref("ldap_2.servers.history.replication.lastChangeNumber", 0); user_pref("ldap_2.servers.infospace.filename", "infospace.mab"); user_pref("ldap_2.servers.infospace.replication.lastChangeNumber", 0); user_pref("ldap_2.servers.netcenter.filename", "netcenter.mab"); user_pref("ldap_2.servers.netcenter.replication.lastChangeNumber", 0); user_pref("ldap_2.servers.pab.filename", "abook.mab"); user_pref("ldap_2.servers.pab.replication.lastChangeNumber", 0); user_pref("ldap_2.servers.verisign.filename", "verisign.mab"); user_pref("ldap_2.servers.verisign.replication.lastChangeNumber", 0); user_pref("mail.account.account1.identities", "id1"); user_pref("mail.account.account1.server", "server1"); user_pref("mail.account.account2.server", "server2"); user_pref("mail.accountmanager.accounts", "account1,account2"); user_pref("mail.accountmanager.defaultaccount", "account1"); user_pref("mail.accountmanager.localfoldersserver", "server2"); user_pref("mail.identity.id1.draft_folder", "mailbox://nobody@Local%20Folders/Drafts"); user_pref("mail.identity.id1.fcc_folder", "mailbox://nobody@Local%20Folders/Sent"); user_pref("mail.identity.id1.fullName", "Ray Cummins"); user_pref("mail.identity.id1.organization", ""); user_pref("mail.identity.id1.reply_to", ""); user_pref("mail.identity.id1.stationery_folder", "mailbox://nobody@Local%20Folders/Templates"); user_pref("mail.identity.id1.useremail", "rcummins@mail.burlco.lib.nj.us"); user_pref("mail.identity.id1.valid", true); user_pref("mail.root.imap", "C:\\WINDOWS\\DESKTOP\\M17\\Users50\\default\\ImapMail"); user_pref("mail.root.none", "C:\\WINDOWS\\DESKTOP\\M17\\Users50\\default\\Mail"); user_pref("mail.server.server1.capability", 563); user_pref("mail.server.server1.cleanup_inbox_on_exit", true); user_pref("mail.server.server1.delete_model", 0); user_pref("mail.server.server1.directory", "C:\\WINDOWS\\DESKTOP\\M17\\Users50\\default\\ImapMail\\mail.burlco.lib.nj.us"); user_pref("mail.server.server1.hostname", "mail.burlco.lib.nj.us"); user_pref("mail.server.server1.max_cached_connections", 5); user_pref("mail.server.server1.name", "rcummins@mail.burlco.lib.nj.us"); user_pref("mail.server.server1.namespace.other_users", "\"~\""); user_pref("mail.server.server1.namespace.personal", "\"#mh/\",\"#mhinbox\",\"\""); user_pref("mail.server.server1.namespace.public", "\"#public/\",\"#news.\",\"#ftp/\",\"#shared/\""); user_pref("mail.server.server1.timeout", 29); user_pref("mail.server.server1.type", "imap"); user_pref("mail.server.server1.userName", "rcummins"); user_pref("mail.server.server2.directory", "C:\\WINDOWS\\DESKTOP\\M17\\Users50\\default\\Mail\\Local Folders"); user_pref("mail.server.server2.hostname", "Local Folders"); user_pref("mail.server.server2.name", "Local Folders"); user_pref("mail.server.server2.type", "none"); user_pref("mail.server.server2.userName", "nobody"); user_pref("mail.smtp.defaultserver", "smtp1"); user_pref("mail.smtpserver.smtp1.hostname", "mail.burlco.lib.nj.us"); user_pref("mail.smtpservers", "smtp1"); user_pref("prefs.converted-to-utf8", true); user_pref("signon.SignonFileName", "61641554.s"); user_pref("timebomb.first_launch_time", "961641408910000");
reassign to jefft.
Assignee: mscott → jefft
Status: UNCONFIRMED → NEW
Ever confirmed: true
QA Contact: lchiang → huang
Status: NEW → ASSIGNED
Target Milestone: --- → M18
Nominating for nsbeta3 under "correctness" bucket.
Keywords: correctness, nsbeta3
Keywords: mail2
David, Scott, any recommendation on how hard it is to finish this up. I think the problem was that Jeff basically ran out of time because just getting the exit event took too long for beta2 feature dev.
Whiteboard: [b3 need info]
By using 08-09-09-M18 windows commercial build This problem is still occurring, since Jeff is in sabbatical and this is nsbeta3 bug, somebody should look at this bug. Clear Status Whiteboard [b3 need info] since I did check the current build status already, but some developers should answer previous Steve's questions....
Summary: "Clean up ('Expunge') Inbox on Exit" doesn't → "Clean up ('Expunge') Inbox on Exit" doesn't work when Account setting to "Mark as deleted" mode for IMAP server
Whiteboard: [b3 need info]
Perhaps mscott or bienvenu would provide the requested info. Putting need info back in the whiteboard.
Whiteboard: [b3 need info]
sounds like you know more about it than I do, Steve.
I don't know what work needs to be done for this. If we think it's important I can spend some time investigating it. But off the top of my head I don't know.
mail triage marking nsbeta3+
Whiteboard: [b3 need info] → [nsbeta3+]
Karen - is the user able to expunge deleted (X) messages by choosing File | Compact Folder?
Yes. User is able to expunge deleted (X) messages by choosing File | Compact Folder, but is not working for "Clean up ('Expunge') Inbox on Exit".
second pass: - per mail triage
Keywords: relnoteRTM
Whiteboard: [nsbeta3+] → [nsbeta3-][cut 8/28]
*** Bug 53066 has been marked as a duplicate of this bug. ***
sorry for the extra email. Removing mail2 keyword.
Keywords: mail2
Whiteboard: [nsbeta3-][cut 8/28] → [nsbeta3-][cut 8/28] relnote-user
reassigning jefft's bugs to naving
Assignee: jefft → naving
Status: ASSIGNED → NEW
adding mail3 - see me if you have questions about this, Navin. I think it's trivial to fix.
Keywords: mail3
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Fix checked in
This checkin caused bustage of the mac build on the Seamonkey tinderbox and the senna (Linux with REQUIRES) build on Seamonkey-Ports, which was not fixed for 3 hours. I checked in what should be a fix. The reason the fix was required is that these changes caused inter-module dependencies that probably shouldn't exist. I filed bug 63083 and bug 63087 on related issues. Incidentally, who reviewed this code, and why was no message regarding the super-review sent to reviewers@mozilla.org?
Used 02-16-09-Mtrunk build Verified that Clean up ('Expunge') Inbox on Exit" is working when Account setting to "Mark as deleted" mode for IMAP server now. But log bug 69151 for the FIRST TIME launch mail "('Expunge') Inbox on Exit" & "Mark as delete" problem.
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.