Fix bustage caused by naving%netscape.com in checkin to fix bug 43411.  Filed bug 63087 on inter-module dependencies caused by this fix (which are the cause of the bustage).